--- a/index.html
+++ b/index.html
@@ -3,18 +3,37 @@
   <head>
     <meta charset="utf-8" />
     <title>Book-club</title>
+    <!-- style -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- font -->
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,500;0,900;1,300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>Books</h1>
     <div class="quote-div">
       <p class="quote">
-        "Reading is to the mind what exercise is to the body."
+        <em>"Reading is to the mind what exercise is to the body."</em>
       </p>
       <h2 id="quote-writer" class="quote">Joseph Addison</h2>
     </div>
 
     <div class="table-div">
+      <button class="button-add btn btn-lg btn-primary">Add a Book</button>
+
       <table class="books-read">
         <tr>
           <th>number</th>
