--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
         <em>"Reading is to the mind what exercise is to the body."</em>
       </p>
       <h2 id="quote-writer" class="quote">Joseph Addison</h2>
+      <img
+        id="quote-writer-img"
+        src="https://cdn.britannica.com/75/147575-050-4E96698D/Joseph-Addison-engraving.jpg"
+        alt="Joseph Addison portrait"
+      />
     </div>
 
     <div class="table-div">
